--- a/MixedUILibrariesSample/Components/ArticleDescriptionTableViewCell/ArticleDescriptionTableViewCell.xib
+++ b/MixedUILibrariesSample/Components/ArticleDescriptionTableViewCell/ArticleDescriptionTableViewCell.xib
@@ -8,19 +8,25 @@
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="HiraginoKakuGothic.ttc">
+            <string>HiraginoSans-W3</string>
+            <string>HiraginoSans-W6</string>
+        </array>
+    </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="ArticleDescriptionTableViewCell" customModule="MixedUILibrariesSample" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="157"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="138"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="156.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="137.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="おすすめワンポイント：" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lJp-4X-Jyk">
-                        <rect key="frame" x="10" y="100" width="300" height="14"/>
-                        <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="89L-qr-XRt">
+                        <rect key="frame" x="10" y="10" width="300" height="18"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
@@ -35,8 +41,8 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="REz-8B-fSL">
-                                <rect key="frame" x="34" y="10" width="274" height="13.5"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="11"/>
+                                <rect key="frame" x="34" y="10" width="274" height="11"/>
+                                <fontDescription key="fontDescription" name="HiraginoSans-W6" family="Hiragino Sans" pointSize="11"/>
                                 <color key="textColor" red="0.61960784310000006" green="0.59215686270000001" blue="0.60784313729999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -48,8 +54,8 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F5b-pm-kU1">
-                                <rect key="frame" x="34" y="32.5" width="276" height="14.5"/>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="11"/>
+                                <rect key="frame" x="34" y="30" width="276" height="17"/>
+                                <fontDescription key="fontDescription" name="HiraginoSans-W6" family="Hiragino Sans" pointSize="11"/>
                                 <color key="textColor" red="0.61960784310000006" green="0.59215686270000001" blue="0.60784313729999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -60,6 +66,7 @@
                             <constraint firstAttribute="bottom" secondItem="Rqx-W4-rtg" secondAttribute="bottom" constant="8" id="HRI-05-lFi"/>
                             <constraint firstItem="xBk-F9-VHf" firstAttribute="top" secondItem="6My-sk-dNz" secondAttribute="top" constant="9" id="Kip-8Y-IoK"/>
                             <constraint firstItem="xBk-F9-VHf" firstAttribute="leading" secondItem="6My-sk-dNz" secondAttribute="leading" constant="10" id="cmF-0l-BLK"/>
+                            <constraint firstAttribute="height" constant="56" id="cy1-g0-2j3"/>
                             <constraint firstAttribute="bottom" secondItem="F5b-pm-kU1" secondAttribute="bottom" constant="9" id="dgj-aC-906"/>
                             <constraint firstItem="F5b-pm-kU1" firstAttribute="top" secondItem="REz-8B-fSL" secondAttribute="bottom" constant="9" id="fAj-zJ-YDH"/>
                             <constraint firstItem="F5b-pm-kU1" firstAttribute="leading" secondItem="Rqx-W4-rtg" secondAttribute="trailing" constant="8" id="fyP-pa-lYA"/>
@@ -69,43 +76,45 @@
                             <constraint firstAttribute="trailing" secondItem="F5b-pm-kU1" secondAttribute="trailing" constant="10" id="tBZ-4L-Zud"/>
                         </constraints>
                     </view>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YRS-ti-hSt">
-                        <rect key="frame" x="10" y="122" width="300" height="14"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="おすすめワンポイント：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lJp-4X-Jyk">
+                        <rect key="frame" x="10" y="92.5" width="300" height="14"/>
+                        <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="89L-qr-XRt">
-                        <rect key="frame" x="10" y="10" width="300" height="18"/>
-                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oQ3-mh-uwe">
+                        <rect key="frame" x="10" y="117.5" width="300" height="12"/>
+                        <fontDescription key="fontDescription" name="HiraginoSans-W3" family="Hiragino Sans" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
                     <constraint firstItem="6My-sk-dNz" firstAttribute="top" secondItem="89L-qr-XRt" secondAttribute="bottom" constant="8" id="43P-Jg-asY"/>
-                    <constraint firstItem="YRS-ti-hSt" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="AMh-x1-erW"/>
-                    <constraint firstAttribute="trailing" secondItem="YRS-ti-hSt" secondAttribute="trailing" constant="10" id="All-fg-Fei"/>
-                    <constraint firstItem="lJp-4X-Jyk" firstAttribute="top" secondItem="6My-sk-dNz" secondAttribute="bottom" constant="8" id="AzE-Lh-oPh"/>
+                    <constraint firstItem="oQ3-mh-uwe" firstAttribute="top" secondItem="lJp-4X-Jyk" secondAttribute="bottom" constant="11" id="9WO-73-xfX"/>
+                    <constraint firstAttribute="bottom" secondItem="oQ3-mh-uwe" secondAttribute="bottom" constant="8" id="Dbc-Zo-a0j"/>
                     <constraint firstItem="6My-sk-dNz" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="GjH-jn-cqh"/>
                     <constraint firstItem="89L-qr-XRt" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="HcR-lp-Ggy"/>
                     <constraint firstAttribute="trailing" secondItem="89L-qr-XRt" secondAttribute="trailing" constant="10" id="NyN-7f-Mvw"/>
                     <constraint firstAttribute="trailing" secondItem="lJp-4X-Jyk" secondAttribute="trailing" constant="10" id="V9Z-H3-YAB"/>
-                    <constraint firstItem="YRS-ti-hSt" firstAttribute="top" secondItem="lJp-4X-Jyk" secondAttribute="bottom" constant="8" id="c8N-Ez-U6c"/>
+                    <constraint firstAttribute="trailing" secondItem="oQ3-mh-uwe" secondAttribute="trailing" constant="10" id="WJw-z0-IMw"/>
+                    <constraint firstItem="lJp-4X-Jyk" firstAttribute="top" secondItem="6My-sk-dNz" secondAttribute="bottom" id="cI6-ec-b5J"/>
                     <constraint firstAttribute="trailing" secondItem="6My-sk-dNz" secondAttribute="trailing" id="f2V-nl-XPU"/>
+                    <constraint firstItem="oQ3-mh-uwe" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="lTi-nd-Set"/>
                     <constraint firstItem="89L-qr-XRt" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="z4A-Cd-MdJ"/>
                     <constraint firstItem="lJp-4X-Jyk" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="zVT-eY-gQm"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="articleCatchCopyLabel" destination="89L-qr-XRt" id="0rW-fv-ilX"/>
+                <outlet property="articleCatchCopyLabel" destination="oQ3-mh-uwe" id="2PE-vo-vZd"/>
                 <outlet property="articleCategoryImageView" destination="xBk-F9-VHf" id="6uR-2z-y0b"/>
                 <outlet property="articleCategoryLabel" destination="REz-8B-fSL" id="NfZ-3r-TPH"/>
                 <outlet property="articlePublishedDateImageView" destination="Rqx-W4-rtg" id="EFM-y3-BE1"/>
                 <outlet property="articlePublishedDateLabel" destination="F5b-pm-kU1" id="Bxg-uq-aOy"/>
-                <outlet property="articleTitleLabel" destination="lJp-4X-Jyk" id="vaB-2v-Gdt"/>
+                <outlet property="articleTitleLabel" destination="89L-qr-XRt" id="1cC-y1-Hxi"/>
             </connections>
+            <point key="canvasLocation" x="110" y="54.5"/>
         </tableViewCell>
     </objects>
 </document>
