--- a/MixedUILibrariesSample/Components/ArticlePhotoTableViewCell/ArticlePhotoTableViewCell.xib
+++ b/MixedUILibrariesSample/Components/ArticlePhotoTableViewCell/ArticlePhotoTableViewCell.xib
@@ -50,6 +50,9 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="articlePhotoCollectionView" destination="EeP-Z3-8Ew" id="FUn-VT-enM"/>
+            </connections>
             <point key="canvasLocation" x="30" y="112"/>
         </tableViewCell>
     </objects>
